--- a/index.xtml.html
+++ b/index.xtml.html
@@ -10,6 +10,7 @@
         <img src="1234.jpg" height=150ph alt="Ваше фото" class="avatar">
         <h1>Иван</h1>
         <p class="title">Студент Qa studio</p>
+        <p> я быстро обучаюсь </p>
         <p>прохожу обучение в лучшей it школе.</p>
         <a href="iwan.sharapov2013@yandex.ru">iwan.sharapov2013@yandex.ru</a>
         <div class="social">
